<?xml version="1.0"?>
<package format="2">
  <name>ROS_Param_GUI</name>
  <version>0.1.0</version>
  <description>GUI for changing ROS Parameters</description>

  <maintainer email="azberger@andrew.cmu.edu">Aaron Berger</maintainer>

  <license>TODO</license>

  <url type="website">https://github.com/aaronzberger/ROS_Param_GUI</url>

  <author email="azberger@andrew.cmu.edu">Aaron Berger</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
